Bug 303240 - Local Subscription dialog does not show groupware folders
Summary: Local Subscription dialog does not show groupware folders
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 4.9 pre
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-09 16:23 UTC by Andre Heinecke
Modified: 2012-07-09 19:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andre Heinecke 2012-07-09 16:23:55 UTC
As you can no longer toggle the hidden state of groupware folders in Kmail2 it is not possible to locally unsubscribe groupware folders.

I'm reporting this as normal bug, bug for kmail-mobile this is actually a bigger Problem.

Reproducible: Always

Steps to Reproduce:
1. Have an account with grouware folders (Tested with kolab)
2. Open local subscription dialog

Actual Results:  
You don't see calendars / contacts etc.

Expected Results:  
You should see them
Comment 1 Laurent Montel 2012-07-09 16:35:36 UTC
Just a question:
Is it possible to see theses folder in kmail ?
Otherwise why subscribe/unsubscribe ?

In kolab what is "groupware folders" ?
Comment 2 Andre Heinecke 2012-07-09 16:49:56 UTC
It is not possible to see those folders in Kmail anymore as they only contain the messages with the kolabxml items used for calendar/contacts/notes etc. But Kmail still handles imap folder subscription.

Subscribe/unsubscribe because those folders can get quite large and might even clutter your KOrganizer Calendar list with calendars you don't need.

Local Subscription as opposed to Serverside Subscription is mostly a use case of Kmail mobile.

Btw. They are visible in the serverside subscription dialog and can be selected there.

Afaik In kolab groupware folders are imap folders with special annotations that mark their content.
Comment 3 Laurent Montel 2012-07-09 17:32:26 UTC
We can see it if we add specific mimetype.
But I don't see what "hide" it.
There are same mimetype as other folder...
Comment 4 Laurent Montel 2012-07-09 17:34:51 UTC
Ok we hide it with entityhiddenattribute attribute
Comment 5 Laurent Montel 2012-07-09 19:19:27 UTC
Git commit 864797b47a66f68e9b28c9254dd2e31f5b7e884d by Montel Laurent.
Committed on 09/07/2012 at 21:18.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 303240 - Local Subscription dialog does not show groupware

folders
FIXED-IN: 4.9

M  +1    -0    akonadi/standardactionmanager.cpp
M  +5    -0    akonadi/subscriptiondialog.cpp
M  +5    -0    akonadi/subscriptiondialog_p.h
M  +16   -2    akonadi/subscriptionmodel.cpp
M  +5    -0    akonadi/subscriptionmodel_p.h

http://commits.kde.org/kdepimlibs/864797b47a66f68e9b28c9254dd2e31f5b7e884d