Fix Bug 303240 - Local Subscription dialog does not show groupware

folders
FIXED-IN: 4.9
BUG: 303240